# rust-clean-arch

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml  otel-collector-config.yaml
env/: Cargo.toml
env/src/: func.rs  macros.rs
env/tests/: test.rs
src/: config.rs  lib.rs  tracer.rs
src/controller/http/: get_profile.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/microservice_name/: get_profile.rs  mod.rs
src/infrastructure/repository/: get_profile.rs  mod.rs
src/usecase/: get_profile.rs  mod.rs
