[package]
name = "rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env = { path = "env" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.0-rc.4"
async-trait = "0.1"
http-body = "0.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-attributes =  { version = "0.1"}
tracing-opentelemetry = { version = "0.18"}
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["tonic"]  }
opentelemetry-semantic-conventions = { version = "0.10" }
opentelemetry-http = { version = "0.7", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }